<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:checked="true"
                android:id="@+id/item_navigation_drawer_publicaciones"
                android:icon="@drawable/ic_action_content_report"
                android:title="@string/publicaciones" />
            <item
                android:id="@+id/item_navigation_drawer_chats"
                android:icon="@drawable/ic_action_content_mail"
                android:title="@string/chats" />
        </group>

    <item android:title="@string/contactar_con_cualquiera">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_nuevo_chat"
                android:icon="@drawable/ic_action_content_send"
                android:title="@string/iniciar_nuevo_chat" />
        </menu>
    </item>

    <item android:title="@string/seccion_admin">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_nueva_publicacion"
                android:icon="@drawable/ic_action_toggle_star"
                android:title="@string/crear_nueva_publicacion" />
            <item
                android:id="@+id/item_navigation_drawer_administracion"
                android:icon="@drawable/ic_action_action_settings"
                android:title="@string/cosas_de_admin"
                />
        </menu>
    </item>

</menu>