<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhiteFondos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editCabeceraChatTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titulo"
                android:textColor="@color/colorVerdeApp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/editCabeceraChatAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autor"
                android:textColor="@color/colorRojoCabeceras"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCabeceraChatCreado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/creado"
                android:textColor="@color/colorNegro"/>

            <TextView
                android:id="@+id/editCabeceraChatFechaCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start|center"
                android:text="@string/fecha_creacion"
                android:textColor="@color/colorNegro"/>

            <TextView
                android:id="@+id/editCabeceraChatHoraCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hora_creacion"
                android:textColor="@color/colorNegro"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCabeceraChatUltimaModificacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ultima_modificacion"
                android:textColor="@color/colorNegro"/>

            <TextView
                android:id="@+id/editCabeceraChatFechaActualizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start|center"
                android:text="@string/fecha_update"
                android:textColor="@color/colorNegro"/>

            <TextView
                android:id="@+id/editCabeceraChatHoraActualizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hora_update"
                android:textColor="@color/colorNegro"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>